[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/main_menu/custom_game/servers/servers.gd" type="Script" id=1]
[ext_resource path="res://ui/main_menu/custom_game/servers/direct_connect_dialog/direct_coonect_dialog.tscn" type="PackedScene" id=2]

[node name="Servers" type="PanelContainer"]
margin_right = 1162.0
margin_bottom = 756.0
rect_min_size = Vector2( 600, 200 )
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1155.0
margin_bottom = 749.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="VBox"]
margin_left = 731.0
margin_right = 1148.0
margin_bottom = 24.0
size_flags_horizontal = 8

[node name="FilterEdit" type="LineEdit" parent="VBox/HBox"]
margin_right = 250.0
margin_bottom = 24.0
rect_min_size = Vector2( 250, 0 )
placeholder_text = "Search"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateButton" type="Button" parent="VBox/HBox"]
margin_left = 254.0
margin_right = 307.0
margin_bottom = 24.0
text = "Create"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DirectConnectButton" type="Button" parent="VBox/HBox"]
margin_left = 311.0
margin_right = 417.0
margin_bottom = 24.0
text = "Direct connect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServersTable" type="Tree" parent="VBox"]
margin_top = 28.0
margin_right = 1148.0
margin_bottom = 718.0
size_flags_vertical = 3
columns = 3
select_mode = 1

[node name="JoinButton" type="Button" parent="VBox"]
margin_left = 556.0
margin_top = 722.0
margin_right = 591.0
margin_bottom = 742.0
size_flags_horizontal = 4
disabled = true
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DirectConnectDialog" parent="." instance=ExtResource( 2 )]
[connection signal="pressed" from="VBox/HBox/CreateButton" to="." method="_emit_create_request"]
[connection signal="pressed" from="VBox/HBox/DirectConnectButton" to="DirectConnectDialog" method="popup_centered"]
[connection signal="confirmed" from="DirectConnectDialog" to="." method="_emit_direct_join_request"]
